--- a/content/post/2021-10-27-time-series-analysis-in-r/index.en.Rmd
+++ b/content/post/2021-10-27-time-series-analysis-in-r/index.en.Rmd
@@ -23,6 +23,8 @@ z <- read.csv("z.csv")$x
 x <- read.csv("x.csv")$x
 y <- read.csv("y.csv")$x
 
+eu_percentreturns <- as.ts(read.csv("eu_percentreturns.csv"), start = c(1991, 130), end = c(1998, 169), frequency=260)
+
 str(eu_stocks)
 ```
 
@@ -487,6 +489,23 @@ In this exercise, you'll work with the eu_percentreturns dataset, which is the p
 Notice that the average daily return is about 0, while the standard deviation is about 1 percentage point. Also apply the hist() and qqnorm() functions to make histograms and normal quantile plots, respectively, for each of the indices.
 
 ```{r}
+# Generate means from eu_percentreturns
+colMeans(eu_percentreturns) 
+
+# Use apply to calculate sample variance from eu_percentreturns
+apply(eu_percentreturns, MARGIN = 2, FUN = var)
+
+# Use apply to calculate standard deviation from eu_percentreturns
+apply(eu_percentreturns, MARGIN = 2, FUN = sd)
+
+# Display a histogram of percent returns for each index
+par(mfrow = c(2,2))
+apply(eu_percentreturns, MARGIN = 2, FUN = hist, main = "", xlab = "Percentage Return")
+
+# Display normal quantile plots of percent returns for each index
+par(mfrow = c(2,2))
+apply(eu_percentreturns, MARGIN = 2, FUN = qqnorm, main = "")
+qqline(eu_percentreturns)
 
 ```
 
